[package]
name = "app-demo"
version = "0.1.0"
authors = ["liuboheng <lbh9311@sina.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
env_logger = "0.6"
log = "0.4"

actix-service = "1.0.6"
actix-server = "1.0.1"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"

rocksdb = "0.13.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.39"
time = "0.1.42"
librocksdb-sys = "6.6.4"