[package]
name = "graceful-shutdown"
version = "0.1.0"
authors = ["liuboheng <lbh9311@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3"
tokio = { version = "1.8.4", features = ["signal"] }